--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       --text: #222;
       --card: #f3f4f6;
     }
-    /* Tema pastel lembut */
     .theme-blue  { --main: #93c5fd; --main-600:#2563eb; }
     .theme-green { --main: #a7f3d0; --main-600:#059669; }
     .theme-purple{ --main: #e9d5ff; --main-600:#7c3aed; }
@@ -20,7 +19,6 @@
     .btn-main:hover { filter: brightness(0.95); }
     .ring-main:focus { outline: none; box-shadow: 0 0 0 4px rgba(0,0,0,0.05), 0 0 0 4px var(--main); }
     .backdrop { background: rgba(0,0,0,0.45); }
-    /* Footer fix */
     #donateFooter {
       position: fixed;
       bottom: 0; left: 0;
@@ -47,10 +45,9 @@
       text-decoration: underline;
     }
     body {
-      padding-bottom: 65px; /* tinggi footer */
+      padding-bottom: 65px;
       min-height: 100vh;
     }
-    /* Custom file input */
     .file-label {
       display: inline-block;
       padding: 0.5rem 1rem;
@@ -64,14 +61,14 @@
     }
     .file-label:hover { background: var(--main-600, #2563eb); color: #fff; }
     input[type="file"].hidden-input { display: none !important; }
-    /* Modal scroll fix */
     .modal-content {
       overscroll-behavior: contain;
       padding-bottom: 2rem;
     }
-    /* Small devices: grid adaptif */
     @media (max-width: 640px) {
       .grid-products { grid-template-columns: 1fr !important; }
+      .list-actions-col { flex-direction: column !important; gap: 6px !important; }
+      .product-list-img { width: 60px !important; height: 60px !important; }
     }
     @media (min-width: 641px) {
       .grid-products { grid-template-columns: repeat(2, minmax(0,1fr)) !important; }
@@ -297,7 +294,6 @@ function loadAll(){
 function setLogoPreview(src){
   const logo = document.getElementById('previewLogo');
   logo.dataset.src = src; logo.src = src; logo.classList.remove('hidden');
-  // Tampilkan di header
   const headerLogo = document.getElementById('headerLogo');
   if(headerLogo){ headerLogo.src = src; headerLogo.classList.remove('hidden'); }
   document.getElementById('siteTitle').textContent = document.getElementById('namaToko').value || 'Nama Toko';
@@ -347,43 +343,98 @@ function hapusProduk(id){ if(!confirm('Hapus produk ini?')) return; produkList =
 
 function resetProdukForm(){ document.getElementById('namaProduk').value=''; document.getElementById('hargaProduk').value=''; document.getElementById('deskripsiProduk').value=''; document.getElementById('fotoProduk').value=''; document.getElementById('kategoriProduk').value=''; }
 
+// PERBAIKAN UTAMA: TAMPAKAN LIST LEBIH RAPI
 function renderProducts(){
-  const container = document.getElementById('productsArea'); container.innerHTML='';
+  const container = document.getElementById('productsArea'); 
+  container.innerHTML='';
   document.getElementById('siteTitle').textContent = document.getElementById('namaToko').value || 'Nama Toko';
   const view = document.getElementById('viewMode').value;
   // group by category
   const groups = {};
-  produkList.forEach(p=>{ const k = p.kategori || 'Umum'; if(!groups[k]) groups[k]=[]; groups[k].push(p); });
+  produkList.forEach(p=>{ 
+    const k = p.kategori || 'Umum'; 
+    if(!groups[k]) groups[k]=[]; 
+    groups[k].push(p); 
+  });
   Object.keys(groups).forEach(kat=>{
     const section = document.createElement('div'); section.className='mb-4';
     const title = document.createElement('h3'); title.className='font-bold text-gray-700 mb-2'; title.textContent = kat; section.appendChild(title);
-    // Grid adaptif
-const isAdmin = document.getElementById('adminPanel').classList.contains('hidden') === false;
-let gridClass = '';
-if (isAdmin && window.innerWidth < 640) {
-  gridClass = 'flex flex-col gap-3'; // admin mode di HP: list
-} else {
-  gridClass = (view === 'grid') ? 'grid grid-products gap-3' : 'flex flex-col gap-3';
-}
-const grid = document.createElement('div');
-grid.className = gridClass;
+
+    // Gunakan wrapper berbeda untuk grid/list
+    const wrap = document.createElement('div');
+    if(view==='grid') {
+      wrap.className = 'grid grid-products gap-3';
+    } else {
+      wrap.className = 'flex flex-col gap-3';
+    }
+
     groups[kat].forEach(item=>{
-      const card = document.createElement('div'); card.className='border rounded-xl p-3 bg-white shadow flex flex-col';
-      if(item.foto){ const img = document.createElement('img'); img.src = item.foto; img.className='w-full h-36 object-cover rounded-lg mb-2'; card.appendChild(img); }
-      const info = document.createElement('div'); info.innerHTML = `<p class="font-semibold text-base">${item.nama}</p><p class="text-sm text-gray-500">${formatRupiah(item.harga)}</p><p class="text-xs text-gray-400">${item.deskripsi||''}</p>`;
+      // Card produk
+      const card = document.createElement('div');
+      if(view==='list'){
+        card.className = 'border rounded-xl bg-white shadow flex flex-row items-center gap-4 p-3';
+      } else {
+        card.className = 'border rounded-xl bg-white shadow flex flex-col p-3';
+      }
+
+      // Gambar produk
+      if(item.foto){
+        const img = document.createElement('img');
+        img.src = item.foto;
+        img.alt = item.nama;
+        img.className = (view==='list')
+          ? 'product-list-img w-20 h-20 object-cover rounded-lg'
+          : 'w-full h-36 object-cover rounded-lg mb-2';
+        card.appendChild(img);
+      }
+
+      // Info produk
+      const info = document.createElement('div');
+      info.className = (view==='list') ? 'flex-1 min-w-0' : '';
+      info.innerHTML = `
+        <p class="font-semibold text-base truncate">${item.nama}</p>
+        <p class="text-sm text-gray-500">${formatRupiah(item.harga)}</p>
+        <p class="text-xs text-gray-400">${item.deskripsi||''}</p>
+      `;
       card.appendChild(info);
-      const actions = document.createElement('div'); actions.className='flex gap-2 mt-2';
-      const addBtn = document.createElement('button'); addBtn.className='flex-1 py-2 rounded-lg btn-main text-gray-900 min-h-[44px]'; addBtn.textContent='Tambah'; addBtn.onclick = ()=>addToCart(item);
-      const waBtn = document.createElement('a'); waBtn.className='flex-1 py-2 rounded-lg bg-green-500 text-white text-center min-h-[44px]'; waBtn.textContent='Order WA'; waBtn.href = `https://wa.me/${document.getElementById('waNumber').value.trim()}?text=${encodeURIComponent('Halo saya mau pesan '+item.nama)}`; waBtn.target='_blank';
-const grid = document.createElement('div');
-if (isAdmin) {
-  grid.className = 'flex flex-col gap-3';
-} else {
-  grid.className = (view === 'grid') ? 'grid grid-products gap-3' : 'flex flex-col gap-3';
-}
-      card.appendChild(actions); grid.appendChild(card);
+
+      // Tombol aksi
+      const actions = document.createElement('div');
+      actions.className = (view==='list')
+        ? 'list-actions-col flex flex-col gap-2 ml-4'
+        : 'flex gap-2 mt-2';
+      const addBtn = document.createElement('button');
+      addBtn.className='py-2 px-3 rounded-lg btn-main text-gray-900 min-h-[44px]';
+      addBtn.textContent='Tambah';
+      addBtn.onclick = ()=>addToCart(item);
+      const waBtn = document.createElement('a');
+      waBtn.className='py-2 px-3 rounded-lg bg-green-500 text-white text-center min-h-[44px]';
+      waBtn.textContent='Order WA';
+      waBtn.href = `https://wa.me/${document.getElementById('waNumber').value.trim()}?text=${encodeURIComponent('Halo saya mau pesan '+item.nama)}`;
+      waBtn.target='_blank';
+
+      actions.appendChild(addBtn);
+      actions.appendChild(waBtn);
+
+      // Tombol admin
+      if(document.getElementById('adminPanel').classList.contains('hidden')===false){
+        const editBtn=document.createElement('button');
+        editBtn.className='px-2 py-1 bg-yellow-500 text-white rounded text-xs';
+        editBtn.textContent='Edit';
+        editBtn.onclick=()=>editProduk(item.id);
+        const delBtn=document.createElement('button');
+        delBtn.className='px-2 py-1 bg-red-500 text-white rounded text-xs';
+        delBtn.textContent='Hapus';
+        delBtn.onclick=()=>hapusProduk(item.id);
+        actions.appendChild(editBtn);
+        actions.appendChild(delBtn);
+      }
+
+      card.appendChild(actions);
+      wrap.appendChild(card);
     });
-    section.appendChild(grid); container.appendChild(section);
+    section.appendChild(wrap);
+    container.appendChild(section);
   });
 }
 
@@ -461,13 +512,11 @@ window.addEventListener('DOMContentLoaded', ()=>{
   document.getElementById('btnTambahKategori').addEventListener('click', tambahKategori);
   document.getElementById('btnProduk').addEventListener('click', handleAddOrEditProduk);
 
-  // Custom label trigger file input
   document.querySelector('label[for="logoInput"]').onclick = ()=>document.getElementById('logoInput').click();
   document.getElementById('logoInput').addEventListener('change', handleLogoUpload);
   document.querySelector('label[for="qrisInput"]').onclick = ()=>document.getElementById('qrisInput').click();
   document.getElementById('qrisInput').addEventListener('change', handleQRISUpload);
 
-  // Custom label import
   document.querySelector('label[for="importFile"]').onclick = ()=>document.getElementById('importFile').click();
   document.getElementById('importFile').addEventListener('change', (e)=>{ const f=e.target.files[0]; if(f) doImport(f); e.target.value=''; });
 
