--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 <body class="bg-gray-100 theme-blue">
 
 <!-- GEAR ICON / ADMIN TOGGLE -->
-<button id="gearBtn" class="fixed top-3 right-3 bg-white p-2 rounded-full shadow-md z-50" aria-label="Admin Panel">⚙️</button>
+<button id="gearBtn" class="fixed top-3 right-3 bg-white p-1 text-lg rounded-full shadow-md z-50" aria-label="Admin Panel">⚙️</button>
 
-<!-- Header (public) -->
+  <!-- Header (public) -->
 <header class="max-w-3xl mx-auto bg-white rounded-2xl shadow p-4 mb-4 flex items-center justify-between">
   <div class="flex items-center gap-3">
     <img id="headerLogo" src="" alt="logo toko" class="h-10 w-10 object-contain rounded-lg hidden">
